# MemTools

./: .gitignore  CMakeLists.txt  DirectMemoryTools.cpp  DirectMemoryTools.h  DmaMemoryTools.cpp  MemoryToolsBase.cpp  MemoryToolsBase.h  README.md  dump.cpp  main.cpp
dmaLibs/include/: vmmdll.h
